2009-08-02  Peter Bloomfield

	* src/sendmsg-window.c (bsmsg_set_subject_from_body): use
	existing subject for continued draft message; new name and api;
	(update_bsmsg_identity), (bsm_finish_setup),
	(sendmsg_window_forward): use new name and api.

2009-08-01  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_get_pixbuf): workaround
	for IE's use of non-IANA registered mime-type "image/pjpeg" for
	progressive JPEG image.

2009-08-01  Peter Bloomfield

	* src/sendmsg-window.c (set_entry_to_subject): do not drop
	subject when continuing a new message.

2006-07-30  Pawel Salek

	* libbalsa/imap/imap-commands.c: lock LIST fixed.
2009-07-28  Peter Bloomfield

	* libbalsa/address-view.c (lbav_add_from_list),
	(lbav_add_from_string): streamline code.

2006-07-28  Pawel Salek

	* libbalsa/address-view.c: protect against empty InternetAddressLists.
	* libbalsa/imap/imap-commands.c: lock LIST, LSUB, STATUS as well.

2009-07-26  Peter Bloomfield

	* src/balsa-mblist.c: do not include gdk/gdkfont.h.

2009-07-26  Peter Bloomfield

	Partial fixes for bug #589764, André Klapper.

	* libbalsa/imap/pop3.c (pop_authenticate): use
	g_ascii_strncasecmp.
	* src/quote-color.c (allocate_quote_colors): remove
	"gdk_color_black" from comment.

2009-07-26  Peter Bloomfield

	* src/sendmsg-window.c: do not include gnome.h.

2009-07-26  Peter Bloomfield

	* src/main-window.c: remove redundant gtk version checks and
	dead code.

2009-07-25  Peter Bloomfield

	* libinit_balsa/assistant_helper.c
	(balsa_init_create_to_directory): show specific error message.

2009-07-23  Peter Bloomfield

	Check for NULL InternetAddressList

	* libbalsa/send.c (do_multipart_crypto):
	* src/sendmsg-window.c (sw_cc_add_list):
	* src/store-address.c (store_address_add_list):

2009-07-21  Peter Bloomfield

	Save send type in draft message

	* src/sendmsg-window.h: new member is_continue.
	* src/sendmsg-window.c (delete_handler), (guess_identity),
	(sendmsg_window_new), (sendmsg_window_continue),