@@ -211,6 +211,11 @@ AC_ARG_WITH(unique,
                   [Use libUnique instead of BonoboActivation (default=no)]),
                   [with_unique=$withval],[with_unique=no])
 
+AC_ARG_WITH(canberra,
+   AC_HELP_STRING([--with-canberra],
+                  [Use libcanberra-gtk2 for filter sounds (default=no)]),
+                  [with_canberra=$withval],[with_canberra=no])
+
 AC_ARG_ENABLE(more-warnings,
    AC_HELP_STRING([--enable-more-warnings],
                   [Enable maximum compiler warnings (default=yes)]),
@@ -784,6 +789,19 @@ else
 fi
 AM_CONDITIONAL([BUILD_WITH_UNIQUE], [test $with_unique = "yes" ])
 
+# libcanberra configuration
+#
+AC_MSG_CHECKING([whether to build with canberra])
+if test x$with_canberra != xno; then
+    AC_MSG_RESULT([yes])
+    PKG_CHECK_MODULES(CANBERRA, [ libcanberra-gtk ])
+    AC_DEFINE(HAVE_CANBERRA,1,[Defined when canberra can be used.])
+    BALSA_CFLAGS="$BALSA_CFLAGS $CANBERRA_CFLAGS"
+    BALSA_LIBS="$BALSA_LIBS $CANBERRA_LIBS"
+else
+    AC_MSG_RESULT([no])
+fi
+
 # ige-mac-integration (Mac OS X desktop only)
 AC_MSG_CHECKING([whether to include Mac OS X Desktop Integration])
 if test x$use_igemacint != xno; then
@@ -980,6 +998,7 @@ echo "                Use ESMTP : $with_esmtp"
 echo " Use WebKit (experimental): $use_webkit"
 echo " Use Unique (experimental): $with_unique"
 echo "                 Use GNOME: $with_gnome"
+echo "              Use Canberra: $with_canberra"
 echo "               Use GtkHTML: $use_gtkhtml"
 echo "                 Use GPGME: $gpgmecfg"
 echo "                  Use LDAP: $with_ldap"
