@@ -1,3 +1,9 @@
+2009-08-04  Peter Bloomfield
+
+	* configure.in: new option --with-canberra=no.
+	* libbalsa/filter.c (libbalsa_filter_mailbox_messages): use
+	libcanberra-gtk in preference to libgnome for filter sounds.
+
 2009-08-02  Peter Bloomfield
 
 	* src/sendmsg-window.c (bsmsg_set_subject_from_body): use
@@ -19,6 +25,7 @@
 2006-07-30  Pawel Salek
 
 	* libbalsa/imap/imap-commands.c: lock LIST fixed.
+
 2009-07-28  Peter Bloomfield
 
 	* libbalsa/address-view.c (lbav_add_from_list),
